<resources>
    <string name="app_name">Mi Finca</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_pass">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="no_have_account">Not have an account? Sign Up</string>
    <string name="home_title">Inicio</string>
    <string name="sign_off">Salir</string>
    <string name="error_email_require">El E-mail es requerido</string>
    <string name="error_pass_require">Digite su contraseña</string>
    <string name="register">Registrarse</string>
    <string name="btn_terneros">Terneros</string>
    <string name="btnLeche">Leche</string>
    <string name="btn_ventas">Ventas</string>
    <string name="btn_cortejos">Cortejos</string>
    <string name="description_btn_exit">Boton cerrar sesión</string>
    <string name="message_welcome">Bienvenido</string>
    <string name="btn_add_ternero">Boton agregar ternero</string>
    <string name="message_fecha_nacimiento">Seleccione la fecha de nacimiento</string>
    <string name="hint_madre">Indique la madre</string>
    <string name="hint_raza">Indique la raza</string>
    <string name="hint_padre">Indique el padre</string>
    <string name="btn_registrar">Registrar</string>
    <string name="require">Requerido</string>
    <string name="macho">Macho</string>
    <string name="hembra">Hembra</string>
    <string name="upload_photo">Subir foto</string>
    <string name="take_photo">Tomar foto</string>
    <string name="img_upload">Photo Upload</string>
    <string name="dialog_delete">Borrar registro</string>
    <string name="dialog_update">Modificar datos</string>
    <string name="dialog_OnLongClick">¿Que desea hacer?</string>
    <string name="confirm_delete">¿Desea eliminar este registro?</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_cancelar_delete">Cancelar</string>
    <string name="hint_sexo">Sexo del animal</string>
    <string name="btn_change_photo">Cambiar foto</string>
    <string name="btnSaveChanges">Guardar cambios</string>
    <string name="description_datePicker">imagen boton calendar</string>
    <string name="description_exitUpdate">imagen boton cancelar actualizado</string>
    <string name="registros_leche">Entregas de leche</string>
    <string name="fecha_actual">Fecha actual:</string>
    <string name="litros_entregados">Entrega:</string>
    <string name="hint_Litros_Entregados">Litros entregados</string>
    <string name="image_btn_filtrar">imagen boton filtrar leche</string>
    <string name="producido_leche">Producido</string>
    <string name="Fecha_Inicial">fecha inicio</string>
    <string name="fecha_fin">Fecha final</string>
    <string name="listo">Listo</string>
    <string name="alert_select_date">Selecciona fecha de inicio y final</string>
    <string name="alert_date_range">La fecha inicial no puede ser superior a la final</string>
    <string name="precio_litro_leche">Indique el precio del litro de leche</string>
    <string name="total_producido">Total producido</string>
    <string name="litros">litros</string>
    <string name="btn_calcular_paga">Calcular</string>
    <string name="btn_update">Modificar registro</string>
    <string name="update">Modificar</string>
    <string name="registros_leche_modified">Modificando entrega</string>
    <string name="registros_ventas">Ventas de ganado</string>
    <string name="btn_add_venta">Boton agregar venta</string>
    <string name="img_venta">imagen de venta</string>
    <string name="registros_nueva_venta">Registrar nueva venta</string>
    <string name="fecha_de_venta">Fecha de venta</string>
    <string name="seleccione_fecha">Seleccionar</string>
    <string name="hint_venta">Venta realizada</string>
    <string name="hint_comprador">Nombre del comprador</string>
    <string name="hint_valor">Precio de venta</string>
    <string name="pregunta_subir_foto">Presione si desea subir una foto</string>
    <string name="no_subir_foto">No deseo subir alguna foto</string>
    <string name="modificar_venta">Modificar venta</string>
    <string name="text_cambiar_foto">Presiona si desea cambiar la foto</string>
    <string name="registros_cortejos">Cortejos</string>
    <string name="btn_add_cortejo">Boton añadir cortejo</string>
    <string name="registros_nuevo_cortejo">Nuevo cortejo</string>
    <string name="hint_macho_cortejo">Caracteristica macho</string>
    <string name="caracteriticas_macho">Caracteristicas del macho</string>
    <string name="caracteriticas_hembra">Caracteristicas de la hembra</string>
    <string name="hint_hembra_cortejo">Caracteristica hembra</string>
    <string name="añadir_cortejo">Registrar</string>
    <string name="img_macho">Foto macho cortejos</string>
    <string name="img_hembra">Foto hembra cortejos</string>
    <string name="modificar_cortejo">Modificar datos</string>
    <string name="modificar_ternero">Modificar</string>
    <string name="invalid_user">Verifique su correo y contraseña</string>
    <string name="complete_registro">Complete todos los campos</string>
    <string name="invalid_email">Error, Verifique su correo y contraseña</string>
    <string name="error_consulta">No ha sido posible mostrar los datos, Intente luego</string>
    <string name="petition_select_date">Por favor seleccione la fecha</string>
    <string name="confirm_update_register">Registro actualizado</string>
    <string name="error_update_register">No ha sido posible modificar el registro</string>
    <string name="error_add_register">No ha sido posible guardar, Intente luego</string>
    <string name="error_open_gallery">No es posible abrir la galeria</string>
    <string name="confirm_upload_photo">Foto sudida</string>
    <string name="failure_upload_photo">Error al subir la foto</string>
    <string name="error_delete_register">No ha sido posible eliminar el registro</string>
    <string name="confirm_delete_register">Registro eliminado</string>
    <string name="session_close">Sesión finalizada</string>
    <string name="confirm_add_register">Registro guardado</string>
    <string name="paga_leche">Pago</string>
    <string name="pesos">pesos</string>
    <string name="animal_macho">Macho</string>
    <string name="error_take_picture">No es posible toma la foto</string>
    <string name="error_permission_storage">Debe habilitar el permiso de almacenamiento</string>
    <string name="animal_hembra">Hembra</string>
    <string name="alert_sexo_date">Verifique la fecha y el sexo</string>
    <string name="login_telefono">Iniciar con telefono</string>
    <string name="hint_phone">Numero de telefono</string>
    <string name="btn_send_message">Enviar</string>
    <string name="hint_code">Codigo de verificación</string>
    <string name="btn_confirm_code">Verificar</string>
    <string name="login_email">Iniciar con correo</string>
    <string name="error_phone_require">El numero de telefono es requerido</string>
</resources>