<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.leche.LecheFragment">

    <TextView
        android:id="@+id/tvTitleLeche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_min_padding"
        android:textSize="@dimen/title_leche"
        android:text="@string/registros_leche"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:id="@+id/subTitleDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_actual"
        android:layout_marginStart="@dimen/common_min_padding"
        app:layout_constraintTop_toTopOf="@id/btnFecha"
        app:layout_constraintBottom_toBottomOf="@id/btnFecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleLeche"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_default_padding"
        android:layout_marginTop="@dimen/common_default_padding"
        app:icon="@drawable/ic_calendar"
        app:layout_constraintStart_toEndOf="@id/subTitleDate"
        app:layout_constraintTop_toBottomOf="@id/tvTitleLeche"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEntregaLeche"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Litros_Entregados"
        app:startIconDrawable="@drawable/ic_cantina"
        app:layout_constraintStart_toStartOf="@id/btnFecha"
        app:layout_constraintEnd_toEndOf="@id/btnFecha"
        app:layout_constraintTop_toBottomOf="@id/btnFecha"
        android:layout_marginTop="@dimen/common_default_padding"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEntregaLeche"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/subTitleEntrega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/litros_entregados"
        android:layout_marginStart="@dimen/common_min_padding"
        app:layout_constraintTop_toTopOf="@id/tilEntregaLeche"
        app:layout_constraintBottom_toBottomOf="@id/tilEntregaLeche"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegisterLeche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_registrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEntregaLeche"/>

    <ImageButton
        android:id="@+id/btnFilterLeche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_filter_leche"
        android:contentDescription="@string/image_btn_filtrar"
        android:layout_marginEnd="@dimen/common_default_padding"
        app:layout_constraintTop_toTopOf="@id/btnRegisterLeche"
        app:layout_constraintBottom_toBottomOf="@id/btnRegisterLeche"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_default_padding"
        android:layout_marginHorizontal="@dimen/common_min_padding"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegisterLeche">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFilterFechaInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fecha_Inicial"
                app:icon="@drawable/ic_calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFilterFechaFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_fin"
                app:icon="@drawable/ic_calendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFiltrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listo"
                android:layout_marginTop="@dimen/common_min_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnFilterFechaInicio"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLeche"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/common_default_padding"
        android:orientation="vertical"
        android:clipToPadding="false"
        tools:listitem = "@layout/item_leche"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvFiltro"
        app:layout_constraintBottom_toTopOf="@id/btnConsultarPago"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConsultarPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/producido_leche"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/common_min_padding"/>


</androidx.constraintlayout.widget.ConstraintLayout>