<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ventas.AddVentaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitleAnadirVenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_min_padding"
            android:textSize="@dimen/title_leche"
            android:text="@string/registros_nueva_venta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextAppearance.MaterialComponents.Body1"/>

        <TextView
            android:id="@+id/tvRequireFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_venta"
            android:layout_marginTop="@dimen/common_48_padding"
            android:layout_marginStart="@dimen/common_default_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleAnadirVenta"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFechaVenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_default_padding"
            app:icon="@drawable/ic_calendar"
            android:text="@string/seleccione_fecha"
            app:layout_constraintStart_toEndOf="@id/tvRequireFecha"
            app:layout_constraintTop_toTopOf="@id/tvRequireFecha"
            app:layout_constraintBottom_toBottomOf="@id/tvRequireFecha"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilVenta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_venta"
            android:layout_marginTop="@dimen/common_default_padding"
            android:layout_marginHorizontal="@dimen/common_default_padding"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnFechaVenta"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etVenta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilComprador"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_comprador"
            android:layout_marginTop="@dimen/common_default_padding"
            android:layout_marginHorizontal="@dimen/common_default_padding"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilVenta"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etComprador"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilValorVenta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_valor"
            android:layout_marginTop="@dimen/common_default_padding"
            android:layout_marginHorizontal="@dimen/common_default_padding"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilComprador"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etValorVenta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvSubirFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_default_padding"
            android:text="@string/pregunta_subir_foto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilValorVenta"/>

        <ImageView
            android:id="@+id/imgUploadVenta"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginHorizontal="@dimen/common_default_padding"
            android:layout_marginTop="@dimen/common_default_padding"
            android:layout_marginBottom="@dimen/common_default_padding"
            android:contentDescription="@string/img_upload"
            android:visibility="gone"
            android:background="@color/design_default_color_secondary_variant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubirFoto"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrarVenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrar"
            android:layout_marginTop="@dimen/common_default_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgUploadVenta"/>

        <ProgressBar
            android:id="@+id/pbVenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_default_padding"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgUploadVenta"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>