<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.leche.ProducidoFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_default_padding"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroudEditTernero">

            <TextView
                android:id="@+id/tvTitleProducido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_producido"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/common_default_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextAppearance.MaterialComponents.Body1"/>

            <TextView
                android:id="@+id/tvProducidoLeche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Total producido 200 litros"
                android:layout_marginTop="@dimen/common_default_padding"
                android:layout_marginHorizontal="@dimen/common_default_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleProducido"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/precio_litro_leche"
                android:layout_marginHorizontal="@dimen/common_default_padding"
                android:layout_marginTop="@dimen/common_default_padding"
                app:endIconMode="clear_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvProducidoLeche"
                app:startIconDrawable="@drawable/ic_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCalcularPaga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_default_padding"
                android:layout_marginBottom="@dimen/common_default_padding"
                android:text="@string/btn_calcular_paga"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPrice"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>